feat: 新增刮刮乐学习 --qian

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,5 +10,6 @@ button {
   background-color: black;
 }
 #canvas {
-  background-color: rgb(236, 221, 150);
+  background: url('~@/assets/demo.jpg');
+  margin: 100px;
 }
